--- a/ProjetHotel/ProjetHotel/App.config
+++ b/ProjetHotel/ProjetHotel/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="ProjetHotel.Properties.Settings1.GrandHotel" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=GrandHotel;Integrated Security=True" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
