--- a/ProjetHotel/ProjetHotel/App.config
+++ b/ProjetHotel/ProjetHotel/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="ProjetHotel.Properties.Settings1.GrandHotel" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=GrandHotel;Integrated Security=True" />
+    <add name="ProjetHotel.Settings1.GrandHotelConnect" connectionString="Data Source=(LocalDb)\mssqllocalDb;Initial Catalog=GrandHotel;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
