--- a/ProjetHotel/ProjetHotel/ProjetHotel.csproj
+++ b/ProjetHotel/ProjetHotel/ProjetHotel.csproj
@@ -50,13 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppGrandHotel.cs" />
-    <Compile Include="DAL.cs" />
+    <Compile Include="ContexteGrandHotel.cs" />
     <Compile Include="Entite.cs" />
     <Compile Include="Pages\PageAccueil.cs" />
     <Compile Include="Pages\PageClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings1.Designer.cs">
+    <Compile Include="Settings1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings1.settings</DependentUpon>
@@ -65,8 +65,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Properties\Settings1.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+    <None Include="Settings1.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
